--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Slackbot that checks portability",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "dotenv": "^7.0.0",
+    "lodash": "^4.17.14",
     "slackbot": "^0.0.2",
     "slackbots": "^1.2.0"
   },
